--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack serve --mode=development",
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "start:server": "node server.js"
   },
   "author": "STP",
   "license": "UNLICENSED",
   "devDependencies": {
-    "html-webpack-plugin": "^4.5.1",
-    "webpack": "^5.14.0",
-    "webpack-cli": "^4.3.1",
+    "html-webpack-plugin": "^5.3.1",
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
