--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test:coverage": "jest --coverage",
     "dev": "webpack serve --mode=development",
     "build": "webpack --mode=production",
-    "start:server": "node server.js"
+    "start:server": "node server.js",
+    "gen:com": "npx generate-react-cli component",
+    "gen:lay": "npx generate-react-cli layout"
   },
   "browserslist": [
     "last 2 Chrome versions",
