--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "webpack --mode=production",
     "start:server": "node server.js",
     "gen:com": "npx generate-react-cli component",
-    "gen:lay": "npx generate-react-cli layout"
+    "gen:lay": "npx generate-react-cli component --type=layout"
   },
   "browserslist": [
     "last 2 Chrome versions",
@@ -60,6 +60,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sanitize.css": "^12.0.1",
